--- a/index.html
+++ b/index.html
@@ -28,11 +28,102 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+
+    <div class="container text-center">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-2">
+          <p>9am</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>10am</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>11am</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>12pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>1pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>2pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>3pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>4pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <p>5pm</p>
+        </div>
+        <div class="col-8">Column</div>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
