--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
+    <!-- <textarea> -->
     <div class="container text-center">
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col-2">
           <p>9am</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -45,7 +46,7 @@
         <div class="col-2">
           <p>10am</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -55,7 +56,7 @@
         <div class="col-2">
           <p>11am</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -65,7 +66,7 @@
         <div class="col-2">
           <p>12pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -75,7 +76,7 @@
         <div class="col-2">
           <p>1pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -85,7 +86,7 @@
         <div class="col-2">
           <p>2pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -95,7 +96,7 @@
         <div class="col-2">
           <p>3pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -105,7 +106,7 @@
         <div class="col-2">
           <p>4pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
@@ -115,12 +116,14 @@
         <div class="col-2">
           <p>5pm</p>
         </div>
-        <div class="col-8">Column</div>
+        <textarea class="col-8">Column</textarea>
         <div class="col-2">
           <button type="button" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
+
+    <!-- </textarea> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
