--- a/index.html
+++ b/index.html
@@ -29,12 +29,22 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <!-- <textarea> -->
     <div class="container text-center">
       <!-- Timeblocks go here -->
-      <div class="row">
+
+      <div class="row timeblock">
         <div class="col-2">
-          <p>9am</p>
+          <p>9 am</p>
+        </div>
+        <textarea class="input col-8">Column</textarea>
+        <div class="col-2">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div class="row timeblock">
+        <div class="col-2">
+          <p>10 am</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -42,9 +52,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>10am</p>
+          <p>11 am</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -52,9 +62,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>11am</p>
+          <p>12 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -62,9 +72,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>12pm</p>
+          <p>1 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -72,9 +82,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>1pm</p>
+          <p>2 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -82,9 +92,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>2pm</p>
+          <p>3 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -92,9 +102,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>3pm</p>
+          <p>4 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -102,19 +112,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row timeblock">
         <div class="col-2">
-          <p>4pm</p>
-        </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-2">
-          <p>5pm</p>
+          <p>5 pm</p>
         </div>
         <textarea class="col-8">Column</textarea>
         <div class="col-2">
@@ -122,8 +122,6 @@
         </div>
       </div>
     </div>
-
-    <!-- </textarea> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
