saving text area value. still need to save into local storage

--- a/index.html
+++ b/index.html
@@ -36,90 +36,72 @@
         <div class="col-2">
           <p>9 am</p>
         </div>
-        <textarea class="input col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>10 am</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>11 am</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>12 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>1 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>2 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>3 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>4 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div class="row timeblock">
         <div class="col-2">
           <p>5 pm</p>
         </div>
-        <textarea class="col-8">Column</textarea>
-        <div class="col-2">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
+        <textarea class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
     </div>
 
