local storage is working. still need to figure out time and coloring linking

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="col-2">
           <p>9 am</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="1" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -44,7 +44,7 @@
         <div class="col-2">
           <p>10 am</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="2" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -52,7 +52,7 @@
         <div class="col-2">
           <p>11 am</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="3" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -60,7 +60,7 @@
         <div class="col-2">
           <p>12 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="4" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -68,7 +68,7 @@
         <div class="col-2">
           <p>1 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="5" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -76,7 +76,7 @@
         <div class="col-2">
           <p>2 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="6"class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -84,7 +84,7 @@
         <div class="col-2">
           <p>3 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="7" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -92,7 +92,7 @@
         <div class="col-2">
           <p>4 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="8" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
 
@@ -100,7 +100,7 @@
         <div class="col-2">
           <p>5 pm</p>
         </div>
-        <textarea class="input col-8"></textarea>
+        <textarea id ="9" class="input col-8"></textarea>
         <button type="button" class="col-2 btn btn-primary">Save</button>
       </div>
     </div>
