logic working. added content to README.

--- a/index.html
+++ b/index.html
@@ -32,76 +32,76 @@
     <div class="container text-center">
       <!-- Timeblocks go here -->
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="9" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>9 am</p>
         </div>
-        <textarea id ="1" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="1" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="10" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>10 am</p>
         </div>
-        <textarea id ="2" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="2" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="11" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>11 am</p>
         </div>
-        <textarea id ="3" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="3" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="12" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>12 pm</p>
         </div>
-        <textarea id ="4" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="4" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="13" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>1 pm</p>
         </div>
-        <textarea id ="5" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="5" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="14" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>2 pm</p>
         </div>
-        <textarea id ="6"class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="6" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="15" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>3 pm</p>
         </div>
-        <textarea id ="7" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="7" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="16" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>4 pm</p>
         </div>
-        <textarea id ="8" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="8" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
 
-      <div class="row timeblock">
-        <div class="col-2">
+      <div id="17" class="row timeblock d-flex flex-row align-items-center">
+        <div class="col-2 time">
           <p>5 pm</p>
         </div>
-        <textarea id ="9" class="input col-8"></textarea>
-        <button type="button" class="col-2 btn btn-primary">Save</button>
+        <textarea id="9" class="input col-8"></textarea>
+        <button type="button" class="col-2 btn btn-primary h-50">Save</button>
       </div>
     </div>
 
